--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@skeletonlabs/skeleton": "^1.9.0",
     "@sveltejs/adapter-auto": "^2.1.0",
+    "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.22.3",
     "@sveltejs/package": "^2.2.0",
     "autoprefixer": "^10.4.14",
@@ -47,7 +48,6 @@
   "types": "./dist/index.d.ts",
   "type": "module",
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
     "svelte-icons": "^2.1.0"
   }
 }
